# insightsGPT

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  load_data.py  pyproject.toml
insightsGPT/backend/: main.py
insightsGPT/backend/api/: query.py
insightsGPT/lib/: chromadb.py  config.py
insightsGPT/llm/: main.py
insightsGPT/llm/api/: chat.py
llm/: main.py
llm/api/v1/: chat.py
llm/lib/: config.py
ui/: .env.example  README.md  package.json  pnpm-lock.yaml
ui/app/: layout.tsx  page.tsx
ui/components/: ChatWindow.tsx  Spinner.tsx
